# lidar_camera_perception

./: .gitignore  README.md
src/CalibrationTools/: README.md  requirements.txt
src/CalibrationTools/common/tier4_calibration_pcl_extensions/: CMakeLists.txt
src/CalibrationTools/common/tier4_calibration_views/: CMakeLists.txt  package.xml
src/CalibrationTools/common/tier4_ground_plane_utils/: CMakeLists.txt
src/CalibrationTools/common/tier4_tag_utils/: CMakeLists.txt
src/CalibrationTools/sensor/extrinsic_map_based_calibrator/: CMakeLists.txt
src/CalibrationTools/sensor/intrinsic_camera_calibrator/intrinsic_camera_calibrator/: setup.py
src/CalibrationTools/sensor/mapping_based_calibrator/: CMakeLists.txt
src/CalibrationTools/sensor/marker_radar_lidar_calibrator/: CMakeLists.txt
src/CalibrationTools/sensor/sensor_calibration_manager/launch/default_project/: tag_based_pnp_calibrator.launch.xml
src/CalibrationTools/sensor/tag_based_pnp_calibrator/: CMakeLists.txt
src/CalibrationTools/sensor/tag_based_sfm_calibrator/: CMakeLists.txt
src/autoware_point_types/: CMakeLists.txt
src/autoware_utils/: CMakeLists.txt
src/image_transport_decompressor/: CMakeLists.txt
src/kalman_filter/: CMakeLists.txt
src/lanelet2_extension/: CMakeLists.txt
src/lidar_camera_align/: CMakeLists.txt  package.xml
src/lidar_camera_align/src/: lidar_camera_align.cpp
src/map_server/: CMakeLists.txt  package.xml  readme.md
src/map_server/data/20240929-134842/: 20240929-134842.json
src/map_server/include/master_map/: master_map.h
src/map_server/launch/: master_map.launch.py
src/map_server/src/master_map/: master_map.cpp
src/map_server/srv/: LoadFilter.srv  LoadMasterMap.srv
src/map_server/tests/: costmap_visualization.cpp
src/my_calibration_tools/: CMakeLists.txt  package.xml
src/my_calibration_tools/data/: 3d-2d_match_points.txt  camera_info.yaml  output.pcd  output.ply
src/my_calibration_tools/src/: 3d_lidar_base_link_calobration.cpp  pnp.cpp  point_cloud_registration_integration.cpp
src/my_point_cloud_preprocessor/: CMakeLists.txt  package.xml
src/my_point_cloud_preprocessor/include/: occupancy_grid_map.h  pointcloud_common.h
src/my_point_cloud_preprocessor/src/: my_pointcloud_preprocessor.cpp  occupancy_grid_map.cpp  passthrough_uint16.cpp
src/occupancy_grid_map_to_cost_map/: CMakeLists.txt  package.xml
src/occupancy_grid_map_to_cost_map/config/: config.yaml
src/occupancy_grid_map_to_cost_map/include/: occupancy_grid_map_to_cost_map_node.h
src/occupancy_grid_map_to_cost_map/launch/: pcd_filter.launch.py
src/occupancy_grid_map_to_cost_map/src/: occupancy_grid_map_to_cost_map_node.cpp
src/occupancy_grid_map_to_cost_map/test/: static_map_to_point_cloud.cpp
src/onnx_runtime/: CMakeLists.txt  package.xml
src/onnx_runtime/src/: onnx.cpp  onnx_runtime_inferencing.cpp
src/perception_common/: CMakeLists.txt  package.xml
src/perception_common/include/: perception_common.h
src/perception_common/src/: perception_common.cpp
src/pointcloud_preprocessor/: CMakeLists.txt
src/pointcloud_preprocessor/launch/: preprocessor.launch.py  preprocessor.launch.xml
src/pointcloud_preprocessor/src/crop_box_filter/: crop_box_filter_nodelet.cpp
src/static_occupancy_grid_map/: CMakeLists.txt  package.xml
src/static_occupancy_grid_map/config/: config.yaml
src/static_occupancy_grid_map/launch/: pcd_filter.launch.py
src/static_occupancy_grid_map/src/: occupancy_grid_map_to_cost_map_node.cpp
src/static_occupancy_grid_map/test/: costmap_visualizer.cpp  static_map_to_point_cloud.cpp
src/tier4_autoware_utils/: CMakeLists.txt
src/tier4_pcl_extensions/: CMakeLists.txt
src/ubh_robot/: ubh_robot.urdf
