<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_server</name>
  <version>1.1.15</version>
  <description>
    map server 
  </description>
  <maintainer email="lijun.fang@ubtrobot.com">lijun fang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>nav2_common</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>