<?xml version="1.0"?>
<package format="2">
  <name>static_occupancy_grid_map</name>
  <version>0.0.1</version>
  <description>Convert nav_msgs::msg::OccupancyGrid to costmap_2d::Costmap2D</description>
  <maintainer email="lijun.fang@ubtrobot.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>perception_common</depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>